samples/_failures_safe/1761263336_16765e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5371523f.c: In function ‘main’:
./samples/SAFE/__tmp_5371523f.c:171:21: error: missing terminating " character
  171 |     fprintf(stderr, "Error:
      |                     ^~~~~~~
./samples/SAFE/__tmp_5371523f.c:171:5: error: expected expression at end of input
  171 |     fprintf(stderr, "Error:
      |     ^~~~~~~
./samples/SAFE/__tmp_5371523f.c:171:5: error: expected declaration or statement at end of input
